--- a/newCRM/app.config
+++ b/newCRM/app.config
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<configSections>
-</configSections>
+  <configSections>
+  </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
   <appSettings>
     <!--<add key="server" value="http://crmb-fanx.dev.lanyicj.cn"/>-->
     <!--<add key="server" value="http://192.168.50.194:8080"/>-->
-    <add key="server" value="http://crm-test.lanyife.com.cn"/>
+    <!--<add key="server" value="http://crm-test.lanyife.com.cn"/>-->
+    <add key="server" value="http://crm.lanyife.com.cn:8080" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
