--- a/newCRM/packages.config
+++ b/newCRM/packages.config
@@ -4,5 +4,6 @@
   <package id="cef.redist.x86" version="3.2623.1401" targetFramework="net40" />
   <package id="CefSharp.Common" version="49.0.1" targetFramework="net40" />
   <package id="CefSharp.Wpf" version="49.0.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
   <package id="RestSharp" version="104.5.0" targetFramework="net40" />
 </packages>
